--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 DATABASE_URL=postgresql://glorri:0220@localhost:5432/employee-manager_db
 ://glorri:0220@localhost:5432/employee-manager_db
+USER=glorri
+DATABASE=employee_manager_db
+PASSWORD=0220
+PORT=5432
