Fix: Database Schema: Tables are relational and labeled for clarity Bug: Seed would not occur, fixed syntax

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DATABASE_URL=postgresql://glorri:0220@localhost:5432/employee-manager_db
-://glorri:0220@localhost:5432/employee-manager_db
+DATABASE_URL=postgresql://glorri:0220@localhost:5432/employee_manager_db
+
 USER=glorri
 DATABASE=employee_manager_db
-PASSWORD=0220
+PASSWORD='0220'
 PORT=5432
