Change: DB URL to Railway for hosting

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://glorri:0220@localhost:5432/employee_manager_db
+DATABASE_URL=${{ Postgres.DATABASE_URL }}
 
 USER=glorri
 DATABASE=employee_manager_db
