--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DATABASE_URL=${{ Postgres.DATABASE_URL }}
+DATABASE_URL=postgresql://postgres:yMFnSxPtZItqHcUItCpCEWUXjYOnGrXU@caboose.proxy.rlwy.net:26080/railway
 
-USER=glorri
-DATABASE=employee_manager_db
-PASSWORD='0220'
+USER=postgres
+DATABASE=railway
+PASSWORD='yMFnSxPtZItqHcUItCpCEWUXjYOnGrXU'
 PORT=5432
