--- a/.env
+++ b/.env
@@ -1,6 +1,1 @@
-DATABASE_URL=postgresql://postgres:yMFnSxPtZItqHcUItCpCEWUXjYOnGrXU@caboose.proxy.rlwy.net:26080/railway
-
-USER=postgres
-DATABASE=railway
-PASSWORD='yMFnSxPtZItqHcUItCpCEWUXjYOnGrXU'
-PORT=5432
+DATABASE_URL = ${{ Postgres.DATABASE_URL }}
